--- a/styles/flowers.css
+++ b/styles/flowers.css
@@ -199,6 +199,134 @@ main h4{
 .flower-li{
   margin-top: 20px;
 }
+.badge{
+  animation: spin 0.2s linear 50;
+}
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+
+/*joint part*/
+.join-text{
+  margin-top: 120px;
+}
+.bloom {
+    background-image: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url("../assets/deal-bloom.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 366.22px;
+    height: 206px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+
+}
+
+.bloom h3 {
+    color: rgb(255, 255, 255);
+    font-family: Noto Serif;
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.bloom a {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.ana {
+    background-image: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url("../assets/deal-ana.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 366.22px;
+    height: 206px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    margin-top: -7px;
+
+}
+
+.ana h3 {
+    color: rgb(255, 255, 255);
+    font-family: Noto Serif;
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.ana a {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.zabo {
+    background-image: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url("../assets/deal-zabo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 700px;
+    height: 423.13px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 16px;
+    margin-left: 30px;
+
+}
+
+.zabo h3 {
+    color: rgb(255, 255, 255);
+    font-family: Noto Serif;
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.zabo a {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.blooms {
+    gap: 30px;
+    margin-top: 50px;
+}
+
+.blooms-left {
+   display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.blooms-display-flex{
+  display: flex;
+  width: 100%;
+  max-width: 1140px;
+  margin: auto;
+  margin-top: 60px;
+
+}
+.join{
+  margin-top: 80px;
+}
 
 
 
